--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Banjarmasin - Kota Seribu Sungai</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Heading 1</h1>
-  <p>Paragraph</p>
+    <section class="top">
+        <img src="img/Menara-Pandang-Banjarmasin-2.jpeg" alt="menarapandang" id="bg">
+        <h2 id="text">Banjarmasin</h2>
+    </section>
+    
+    <section class="bottom">
+        <div class="left">Banjarmasin: Kota Seribu Sungai</div>
+        <div class="right">
+            Banjarmasin, yang terletak di provinsi Kalimantan Selatan, merupakan kota yang terkenal dengan julukan “Kota Seribu Sungai.” Dikelilingi oleh jaringan sungai yang membentuk urat nadi kehidupan masyarakatnya, Banjarmasin menghadirkan pengalaman unik yang tidak ditemukan di kota lain. Salah satu daya tarik utamanya adalah pasar terapung di Sungai Barito, di mana aktivitas jual beli dilakukan langsung di atas perahu tradisional—suatu tradisi yang telah berlangsung selama ratusan tahun. <br> <br>
+            Selain keindahan alam dan budaya sungainya, Banjarmasin juga menyimpan kekayaan sejarah dan kuliner yang memikat. Dari arsitektur Masjid Sultan Suriansyah yang bersejarah hingga cita rasa khas soto Banjar dan ketupat kandangan, kota ini menawarkan perpaduan harmonis antara warisan budaya dan kehidupan modern. Dengan masyarakat yang ramah serta pesona alam yang autentik, Banjarmasin menjadi destinasi ideal bagi siapa pun yang ingin menjelajahi kekayaan budaya Kalimantan.now-deceased comrades.
+        </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
