--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Banjarmasin - Kota Seribu Sungai</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- Awal Parallax Effect -->
     <section class="top">
-        <img src="img/Menara-Pandang-Banjarmasin-2.jpeg" alt="menarapandang" id="bg">
+        <img src="img/Menara-Pandang-Banjarmasin-2.jpeg" alt="Menara Pandang" id="bg">
         <h2 id="text">Banjarmasin</h2>
     </section>
     
@@ -18,9 +21,114 @@
         <div class="left">Banjarmasin: Kota Seribu Sungai</div>
         <div class="right">
             Banjarmasin, yang terletak di provinsi Kalimantan Selatan, merupakan kota yang terkenal dengan julukan “Kota Seribu Sungai.” Dikelilingi oleh jaringan sungai yang membentuk urat nadi kehidupan masyarakatnya, Banjarmasin menghadirkan pengalaman unik yang tidak ditemukan di kota lain. Salah satu daya tarik utamanya adalah pasar terapung di Sungai Barito, di mana aktivitas jual beli dilakukan langsung di atas perahu tradisional—suatu tradisi yang telah berlangsung selama ratusan tahun. <br> <br>
-            Selain keindahan alam dan budaya sungainya, Banjarmasin juga menyimpan kekayaan sejarah dan kuliner yang memikat. Dari arsitektur Masjid Sultan Suriansyah yang bersejarah hingga cita rasa khas soto Banjar dan ketupat kandangan, kota ini menawarkan perpaduan harmonis antara warisan budaya dan kehidupan modern. Dengan masyarakat yang ramah serta pesona alam yang autentik, Banjarmasin menjadi destinasi ideal bagi siapa pun yang ingin menjelajahi kekayaan budaya Kalimantan.now-deceased comrades.
+            Selain keindahan alam dan budaya sungainya, Banjarmasin juga menyimpan kekayaan sejarah dan kuliner yang memikat. Dari arsitektur Masjid Sultan Suriansyah yang bersejarah hingga cita rasa khas soto Banjar dan ketupat kandangan, kota ini menawarkan perpaduan harmonis antara warisan budaya dan kehidupan modern. Dengan masyarakat yang ramah serta pesona alam yang autentik, Banjarmasin menjadi destinasi ideal bagi siapa pun yang ingin menjelajahi kekayaan budaya Kalimantan.
         </div>
     </section>
+    <!-- Akhir Parallax Effect -->
+
+    <!-- Awal Efek Pembatas Gelombang -->
+    <div class="wave-divider">
+        <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" class="wave-layer-1"></path>
+            <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" class="wave-layer-2"></path>
+            <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="wave-layer-3"></path>
+        </svg>
+    </div>
+    <!-- Akhir Efek Pembatas Gelombang -->
+
+    <!-- Awal Gallery Slider -->
+    <div class="slider-container">
+        <div class="slide active">
+            <div class="slide-content">
+                <div class="text-content">
+                    <h2 class="slide-title">Pasar Terapung</h2>
+                    <p class="slide-description">
+                        Pasar Terapung adalah salah satu daya tarik utama Banjarmasin, di mana aktivitas jual beli dilakukan di atas perahu tradisional. Pengunjung dapat menikmati pengalaman unik berbelanja sambil menyusuri sungai.
+                    </p>
+                </div>
+                <div class="image-content">
+                    <img src="img/Pasar-Terapung-Floating-Market-Banjarmasin.jpg" alt="Pasar Terapung" class="featured-image">
+                </div>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="slide-content">
+                <div class="text-content">
+                    <h2 class="slide-title">Kampung Tradisional Sasirangan</h2>
+                    <p class="slide-description">
+                        Kampung Tradisional Sasirangan adalah kawasan yang terkenal dengan kerajinan kain sasirangan, yaitu kain tradisional yang diwarnai dengan teknik ikat. Pengunjung dapat melihat proses pembuatan kain ini secara langsung dan membeli produk-produk lokal.
+                    </p>
+                </div>
+                <div class="image-content">
+                    <img src="img/Kampung Sasirangan.jpg" alt="Kampung Tradisional Sasirangan" class="featured-image">
+                </div>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="slide-content">
+                <div class="text-content">
+                    <h2 class="slide-title">Rumah Bubungan Tinggi</h2>
+                    <p class="slide-description">
+                        Rumah Bubungan Tinggi adalah salah satu contoh arsitektur tradisional Banjar yang memiliki ciri khas atap tinggi dan bentuk yang unik. Rumah ini biasanya dibangun di atas tiang dan memiliki banyak jendela untuk sirkulasi udara yang baik.
+                    </p>
+                </div>
+                <div class="image-content">
+                    <img src="img/Rumah Adat Banjarmasin.jpg" alt="Rumah Bubungan Tinggi" class="featured-image">
+                </div>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="slide-content">
+                <div class="text-content">
+                    <h2 class="slide-title">Masjid <br>Sultan Nuriansyah</h2>
+                    <p class="slide-description">
+                        Masjid Sultan Nuriansyah adalah masjid bersejarah yang terletak di Banjarmasin. Masjid ini dikenal dengan arsitektur yang megah dan menjadi pusat kegiatan keagamaan di daerah tersebut.
+                    </p>
+                </div>
+                <div class="image-content">
+                    <img src="img/Masjid-Sultan-Suriansyah-Banjarmasin-6.jpeg" alt="Masjid Sultan Nuriansyah" class="featured-image">
+                </div>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="slide-content">
+                <div class="text-content">
+                    <h2 class="slide-title">Pulau Kembang</h2>
+                    <p class="slide-description">
+                        Pulau Kembang adalah sebuah pulau kecil yang terletak di tengah Sungai Barito, Banjarmasin. Pulau ini dikenal dengan keindahan alamnya dan menjadi tempat wisata yang populer bagi pengunjung yang ingin menikmati suasana alam yang tenang.
+                    </p>
+                </div>
+                <div class="image-content">
+                    <img src="img/Pulau Kembang.jpg" alt="Pulau Kembang" class="featured-image">
+                </div>
+            </div>
+        </div>
+
+        <button class="navigation nav-prev">
+            <ion-icon name="chevron-back-outline"></ion-icon>
+        </button>
+        <button class="navigation nav-next">
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+        </button>
+
+        <div class="slide-counter">
+            <span id="current-slide">1</span> / <span id="total-slides">5</span>  
+        </div>
+
+        <div class="thumbnails">
+            <img src="img/Pasar-Terapung-Floating-Market-Banjarmasin.jpg" alt="Pasar Terapung" class="thumbnail active" data-slide="0">
+            <img src="img/Kampung Sasirangan.jpg" alt="Kampung Tradisional Sasirangan" class="thumbnail" data-slide="1">
+            <img src="img/Rumah Adat Banjarmasin.jpg" alt="Rumah Bubungan Tinggi" class="thumbnail" data-slide="2">
+            <img src="img/Masjid-Sultan-Suriansyah-Banjarmasin-6.jpeg" alt="Masjid Sultan Nuriansyah" class="thumbnail" data-slide="3">
+            <img src="img/Pulau Kembang.jpg" alt="Pulau Kembang" class="thumbnail" data-slide="4">
+        </div>
+
+    </div>
+    <!-- Akhir Gallery Slider -->
 
     <script src="script.js"></script>
 </body>
