--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Banjarmasin - Kota Seribu Sungai</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,9 +20,9 @@
     </section>
     
     <section class="bottom">
-        <div class="left">Banjarmasin: Kota Seribu Sungai</div>
+        <div class="left">Banjarmasin:<br class="mobile-break"> Kota Seribu Sungai</div>
         <div class="right">
-            Banjarmasin, yang terletak di provinsi Kalimantan Selatan, merupakan kota yang terkenal dengan julukan “Kota Seribu Sungai.” Dikelilingi oleh jaringan sungai yang membentuk urat nadi kehidupan masyarakatnya, Banjarmasin menghadirkan pengalaman unik yang tidak ditemukan di kota lain. Salah satu daya tarik utamanya adalah pasar terapung di Sungai Barito, di mana aktivitas jual beli dilakukan langsung di atas perahu tradisional—suatu tradisi yang telah berlangsung selama ratusan tahun. <br> <br>
+            Banjarmasin adalah kota yang dibangun di atas pertemuan Sungai Barito dan Martapura di Provinsi Kalimantan Selatan. Julukan "Kota Seribu Sungai" sangat tepat menggambarkan kondisi geografis kota ini yang dipenuhi kanal dan aliran sungai. Tradisi pasar terapung yang masih bertahan hingga kini menjadikan Banjarmasin sebagai salah satu kota di Indonesia dengan karakteristik budaya sungai yang kuat. <br> <br>
             Selain keindahan alam dan budaya sungainya, Banjarmasin juga menyimpan kekayaan sejarah dan kuliner yang memikat. Dari arsitektur Masjid Sultan Suriansyah yang bersejarah hingga cita rasa khas soto Banjar dan ketupat kandangan, kota ini menawarkan perpaduan harmonis antara warisan budaya dan kehidupan modern. Dengan masyarakat yang ramah serta pesona alam yang autentik, Banjarmasin menjadi destinasi ideal bagi siapa pun yang ingin menjelajahi kekayaan budaya Kalimantan.
         </div>
     </section>
@@ -41,9 +43,9 @@
         <div class="slide active">
             <div class="slide-content">
                 <div class="text-content">
-                    <h2 class="slide-title">Pasar Terapung</h2>
+                    <h2 class="slide-title">Pasar <br class="mobile-break">Terapung</h2>
                     <p class="slide-description">
-                        Pasar Terapung adalah salah satu daya tarik utama Banjarmasin, di mana aktivitas jual beli dilakukan di atas perahu tradisional. Pengunjung dapat menikmati pengalaman unik berbelanja sambil menyusuri sungai.
+                        Pasar Terapung adalah salah satu daya tarik utama Banjarmasin, di mana aktivitas jual beli dilakukan di atas perahu tradisional sejak dini hari. Pengunjung dapat menikmati pengalaman unik berbelanja sambil menyusuri sungai dan melihat berbagai hasil bumi segar serta makanan tradisional khas Banjar.
                     </p>
                 </div>
                 <div class="image-content">
@@ -55,9 +57,9 @@
         <div class="slide">
             <div class="slide-content">
                 <div class="text-content">
-                    <h2 class="slide-title">Kampung Tradisional Sasirangan</h2>
+                    <h2 class="slide-title">Kampung <br>Tradisional Sasirangan</h2>
                     <p class="slide-description">
-                        Kampung Tradisional Sasirangan adalah kawasan yang terkenal dengan kerajinan kain sasirangan, yaitu kain tradisional yang diwarnai dengan teknik ikat. Pengunjung dapat melihat proses pembuatan kain ini secara langsung dan membeli produk-produk lokal.
+                        Kampung Tradisional Sasirangan adalah kawasan yang terkenal dengan kerajinan kain sasirangan, yaitu kain tradisional khas Banjar yang diwarnai dengan teknik ikat turun-temurun. Pengunjung dapat melihat proses pembuatan secara langsung dan membeli produk sasirangan asli dengan berbagai motif dan warna.
                     </p>
                 </div>
                 <div class="image-content">
@@ -69,9 +71,9 @@
         <div class="slide">
             <div class="slide-content">
                 <div class="text-content">
-                    <h2 class="slide-title">Rumah Bubungan Tinggi</h2>
+                    <h2 class="slide-title">Rumah <br>Bubungan Tinggi</h2>
                     <p class="slide-description">
-                        Rumah Bubungan Tinggi adalah salah satu contoh arsitektur tradisional Banjar yang memiliki ciri khas atap tinggi dan bentuk yang unik. Rumah ini biasanya dibangun di atas tiang dan memiliki banyak jendela untuk sirkulasi udara yang baik.
+                        Rumah Bubungan Tinggi adalah contoh arsitektur tradisional Banjar yang memiliki ciri khas atap tinggi dan bentuk unik dengan struktur panggung. Rumah ini dibangun di atas tiang kayu dan dilengkapi banyak jendela untuk sirkulasi udara yang baik, mencerminkan adaptasi terhadap iklim tropis dan budaya sungai.
                     </p>
                 </div>
                 <div class="image-content">
@@ -85,7 +87,7 @@
                 <div class="text-content">
                     <h2 class="slide-title">Masjid <br>Sultan Nuriansyah</h2>
                     <p class="slide-description">
-                        Masjid Sultan Nuriansyah adalah masjid bersejarah yang terletak di Banjarmasin. Masjid ini dikenal dengan arsitektur yang megah dan menjadi pusat kegiatan keagamaan di daerah tersebut.
+                        Masjid Sultan Nuriansyah adalah masjid bersejarah yang terletak di Banjarmasin dengan arsitektur yang memadukan gaya tradisional Banjar dan Islam. Masjid ini dikenal dengan kubah dan menara yang megah, serta menjadi pusat kegiatan keagamaan dan destinasi wisata religi yang populer di Kalimantan Selatan.
                     </p>
                 </div>
                 <div class="image-content">
@@ -97,9 +99,9 @@
         <div class="slide">
             <div class="slide-content">
                 <div class="text-content">
-                    <h2 class="slide-title">Pulau Kembang</h2>
+                    <h2 class="slide-title">Pulau <br class="mobile-break">Kembang</h2>
                     <p class="slide-description">
-                        Pulau Kembang adalah sebuah pulau kecil yang terletak di tengah Sungai Barito, Banjarmasin. Pulau ini dikenal dengan keindahan alamnya dan menjadi tempat wisata yang populer bagi pengunjung yang ingin menikmati suasana alam yang tenang.
+                        Pulau Kembang adalah sebuah pulau kecil di tengah Sungai Barito yang dikenal sebagai habitat alami bekantan yang dilindungi. Pulau ini menawarkan keindahan alam yang asri dan menjadi tempat wisata populer untuk menikmati suasana tenang sambil mengamati satwa endemik Kalimantan.
                     </p>
                 </div>
                 <div class="image-content">
