--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="manifest" href="site.webmanifest">
+
     <title>Banjarmasin - Kota Seribu Sungai</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,15 +36,11 @@
     </section>
     <!-- Akhir Parallax Effect -->
 
-    <!-- Awal Efek Pembatas Gelombang -->
     <div class="wave-divider">
         <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" class="wave-layer-1"></path>
-            <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" class="wave-layer-2"></path>
-            <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="wave-layer-3"></path>
+            <path d="M1200 120L0 120L0 0Q300 50 600 50T1200 0V120Z" class="wave-layer-1"></path>
         </svg>
     </div>
-    <!-- Akhir Efek Pembatas Gelombang -->
 
     <!-- Awal Gallery Slider -->
     <div class="slider-container">
@@ -85,9 +89,9 @@
         <div class="slide">
             <div class="slide-content">
                 <div class="text-content">
-                    <h2 class="slide-title">Masjid <br>Sultan Nuriansyah</h2>
+                    <h2 class="slide-title">Masjid <br>Sultan Suriansyah</h2>
                     <p class="slide-description">
-                        Masjid Sultan Nuriansyah adalah masjid bersejarah yang terletak di Banjarmasin dengan arsitektur yang memadukan gaya tradisional Banjar dan Islam. Masjid ini dikenal dengan kubah dan menara yang megah, serta menjadi pusat kegiatan keagamaan dan destinasi wisata religi yang populer di Kalimantan Selatan.
+                        Masjid Sultan Suriansyah adalah masjid bersejarah yang terletak di Banjarmasin dengan arsitektur yang memadukan gaya tradisional Banjar dan Islam. Masjid ini dikenal dengan kubah dan menara yang megah, serta menjadi pusat kegiatan keagamaan dan destinasi wisata religi yang populer di Kalimantan Selatan.
                     </p>
                 </div>
                 <div class="image-content">
@@ -131,6 +135,98 @@
 
     </div>
     <!-- Akhir Gallery Slider -->
+
+    <div class="wave-divider-2">
+        <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M0 120L1200 120L1200 0Q900 50 600 50T0 0V120Z" class="wave-layer-1"></path>
+        </svg>
+    </div>
+
+    <!-- Awal Card Stack Section -->
+    <section class="card-stack-section">
+        <div class="section-header">
+            <h2 class="section-title">Kuliner Khas Banjarmasin</h2>
+            <p class="section-subtitle">Nikmati cita rasa autentik dan kelezatan kuliner tradisional Banjar</p>
+        </div>
+        
+        <div class="card-stack-container">
+            <div class="card-stack">
+                <div class="card" data-card="1">
+                    <div class="card-image">
+                        <img src="img/Soto Banjar.jpg" alt="Soto Banjar">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Soto Banjar</h3>
+                        <p class="card-description">Soto khas Banjar dengan kuah bening yang gurih, berisi daging sapi, perkedel kentang, dan telur rebus. Disajikan dengan nasi putih dan sambal terasi yang pedas menggugah selera.</p>
+                    </div>
+                </div>
+
+                <div class="card" data-card="2">
+                    <div class="card-image">
+                        <img src="img/Gangan-Asam-Banjar.webp" alt="Gangan Asam">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Gangan Asam</h3>
+                        <p class="card-description">Sayur asam khas Banjar dengan cita rasa segar dan asam yang menggoda. Terbuat dari ikan patin, sayuran segar, dan bumbu rempah tradisional yang khas Kalimantan Selatan.</p>
+                    </div>
+                </div>
+
+                <div class="card" data-card="3">
+                    <div class="card-image">
+                        <img src="img/Mandai.jpg" alt="Mandai">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Mandai</h3>
+                        <p class="card-description">Makanan tradisional Banjar berupa kulit cempedak yang telah difermentasi dan dimasak dengan bumbu rempah. Tekstur kenyal dengan rasa gurih yang unik, biasanya disajikan sebagai lauk pendamping.</p>
+                    </div>
+                </div>
+
+                <div class="card" data-card="4">
+                    <div class="card-image">
+                        <img src="img/Wadai Bingka.jpg" alt="Wadai Bingka">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Wadai Bingka</h3>
+                        <p class="card-description">Kue tradisional Banjar yang manis dan lembut, terbuat dari tepung beras dengan santan kelapa. Memiliki tekstur kenyal dan aroma pandan yang harum, cocok disajikan dengan teh atau kopi.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-navigation">
+                <button class="card-nav-btn prev-card" aria-label="Previous Card">
+                    <ion-icon name="chevron-back-outline"></ion-icon>
+                </button>
+                <div class="card-indicators">
+                    <span class="indicator active" data-card="1"></span>
+                    <span class="indicator" data-card="2"></span>
+                    <span class="indicator" data-card="3"></span>
+                    <span class="indicator" data-card="4"></span>
+                </div>
+                <button class="card-nav-btn next-card" aria-label="Next Card">
+                    <ion-icon name="chevron-forward-outline"></ion-icon>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir Card Stack Section -->
+
+    <div class="wave-divider-3">
+        <svg viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M1200 120L0 120L0 0Q300 50 600 50T1200 0V120Z" class="wave-layer-1"></path>
+        </svg>
+    </div>
+
+    <!-- Awal Footer -->
+    <section class="footer-section">
+        <div class="footer-content">
+            <h2 class="footer-title">Banjarmasin</h2>
+            <p class="footer-description">Kota Seribu Sungai</p>
+            <div class="footer-bottom">
+                <p>&copy; Made by Wasaka WebDev 2025</p>
+            </div>
+        </div>
+    </section>
+    <!-- Akhir Footer -->
 
     <script src="script.js"></script>
 </body>
